# warelib

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
src/warelib/: __init__.py  callbacks.py  config.py  decorators.py  exceptions.py  manager.py  types.py  utils.py  ware.py
