# pyproject.toml boilerplate for a video game project
# https://github.com/pypa/sampleproject/blob/main/setup.cfg


[project]
name = "warelib"
version = "0.1.0"
authors = [{ name = "pygame-community" }]
description = "A helper library for creating interfaces to run collaboratively developed WarioWare like pygame-ce games."
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
test = ["pytest~=8.3.4", "pytest-cov~=6.0.0"]
lint = ["ruff~=0.14.10", "pre-commit~=4.0"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "poethepoet~=0.32",
    "pre-commit>=4.5.1",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
test = "pytest src --doctest-modules --cov=src"
fmt = "ruff format ."
fmt-check = "ruff format --check ."
isort = "ruff check --select I --fix ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."
formatlint = ["fmt", "isort", "lint"]
check = ["fmt-check", "lint", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warelib"]

# Use Ruff to replace Black, isort, and Flake8
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by ruff format
    "B008", # do not perform function calls in argument defaults
    "B028", # No explicit `stacklevel` keyword argument found (?)
    "C901", # too complex
]

unfixable = ["B"] # Don't bother trying to fix flake8-bugbear

# Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
